--- a/apps/color-bomb/src/app/components/bomb/bomb.component.scss
+++ b/apps/color-bomb/src/app/components/bomb/bomb.component.scss
@@ -5,3 +5,14 @@
   position: absolute;
   display: block;
 }
+
+.lifetime {
+  display: block;
+  width: 25px;
+  height: 25px;
+  background: orange;
+  border-radius: 50%;
+  margin-left: auto;
+  text-align: center;
+  line-height: 1.6;
+}
