--- a/apps/color-bomb/src/app/components/bin/bin.component.html
+++ b/apps/color-bomb/src/app/components/bin/bin.component.html
@@ -2,4 +2,11 @@
   [style.height.px]="width"
   [style.width.px]="height"
   [style.background]="color"
+  [style.filter]="filter"
+  [class]="color"
+  [class.lighter-shade]="lighterShade"
+  [class.scale]="scale"
+  (drop)="onDrop($event)"
+  (dragover)="onDragOver()"
+  (dragleave)="onDragLeave()"
 ></div>
