--- a/apps/color-bomb/src/app/components/board/board.component.scss
+++ b/apps/color-bomb/src/app/components/board/board.component.scss
@@ -1,5 +1,5 @@
 .bombs {
-  height: calc(75vh - 80px);
+  height: 65vh;
   position: relative;
   margin: 75px;
 }
@@ -10,4 +10,9 @@
   width: 100%;
   justify-content: space-between;
   margin: 0 auto;
+}
+
+.score {
+  margin: 15px;
+  font-weight: bold;
 }
